# imagined-sound

./: .gitignore  README.md  pixi.toml  pyproject.toml
analysis/: bidsify.py  pipeline-config.py  precompute_epoch_length.py  score.py
experiment/: block_stims.yaml  keywords.yaml  prompts.yaml  run_experiment.py
src/imagined_sound/: bidsify.py  block_stims.yaml  blocks.yaml  prompts.yaml  run_experiment.py
src/imagined_sound/logs/: foo_2025-09-29 13_33_33.402997.tab  foo_2025-09-29 13_39_06.758796.tab  foo_2025-09-29 13_47_34.073151.tab  foo_2025-09-29 13_49_38.722565.tab  foo_2025-09-29 13_51_25.535820.tab
stimgen/: characterize_corpus.py  extract-test-melodies.praat  extract-words.praat  find_valid_foils.py  helpers.py  make_stimuli.py  make_subvoc_stimuli.py  normalize_recorded_music.praat  prep-speech-stims.praat
stimuli/: characterize_corpus.py  find_valid_foils.py  make_stimuli.py
stimuli/scores/: scores-header.ly
tools/: all_ieee_sentences.yaml  find_valid_foils.py  possible_fake_keywords.yaml  usable_fakes.yaml
