[project]
authors = [{name = "Daniel McCloy", email = "dan@mccloy.info"}]
name = "imagined-sound"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "rtmixer>=0.1.7,<0.2", "pyparallel>=0.2.2,<0.3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
imagined_sound = { path = ".", editable = true }
expyfun = { path = "/opt/expyfun", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=9.5.0,<10"
numpy = ">=2.3.3,<3"
scipy = ">=1.16.2,<2"
matplotlib = ">=3.10.6,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
pillow = ">=11.3.0,<12"
portaudio = ">=19.7.0,<20"
h5py = ">=3.14.0,<4"
ffmpeg = "<8"
contourpy = ">=1.3.3,<2"
pyparsing = ">=3.2.5,<4"
kiwisolver = ">=1.4.9,<2"
fonttools = ">=4.60.0,<5"
cycler = ">=0.12.1,<0.13"
pyglet = ">=2.1.9,<3"
pyyaml = ">=6.0.2,<7"
