[project]
authors = [{name = "Daniel McCloy", email = "dan@mccloy.info"}]
name = "imagined-sound"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["expyfun[all] @ git+https://github.com/LABSN/expyfun.git@2570c72"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
imagined_sound = { path = ".", editable = true }

[tool.pixi.tasks]
experiment = { cmd = "python run_experiment.py", cwd = "src/imagined_sound" }
getstims = { cmd = "rsync -rtuv kasga:/data06/dan/stimuli .", cwd = "src/imagined_sound" }
getstims_scp = { cmd = "scp -r kasga:/data06/dan/stimuli .", cwd = "src/imagined_sound" }


[tool.pixi.dependencies]
ipython = ">=9.5.0,<10"
numpy = ">=2.3.3,<3"
scipy = ">=1.16.2,<2"
matplotlib = ">=3.10.6,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
pillow = ">=11.3.0,<12"
portaudio = ">=19.7.0,<20"
h5py = ">=3.14.0,<4"
ffmpeg = "<8"
contourpy = ">=1.3.3,<2"
pyparsing = ">=3.2.5,<4"
kiwisolver = ">=1.4.9,<2"
fonttools = ">=4.60.0,<5"
cycler = ">=0.12.1,<0.13"
pyglet = ">=2.1.9,<3"
pyyaml = ">=6.0.2,<7"
